Fixed dark mode bugs

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 html,
 body,
 #root {
-  @apply h-full w-full font-[Inter] text-gray-700 selection:bg-emerald-500 selection:text-gray-50 dark:text-gray-400;
+  @apply h-full w-full font-[Inter] text-gray-700 selection:bg-emerald-500 selection:text-gray-50 dark:bg-gray-900 dark:text-gray-400;
 }
 
 .active #sidebar-icon {
